Fixed the size of the .security-icon to match the asset itself, so it's not broken on retina

--- a/app/css/figures/security-icon.scss
+++ b/app/css/figures/security-icon.scss
@@ -1,5 +1,5 @@
 @import "mixins/icon-mixin";
 
 .security-icon {
-  @include icon("/images/icons/security-icon", 72px, 72px);
+  @include icon("/images/icons/security-icon", 51px, 72px);
 }
